# Co-Compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
res/: resource.qrc
src/: cocoscriptparser.cpp  cocoscriptparser.h  confighandler.cpp  confighandler.h  enums.h  main.cpp  mainwindow.cpp  mainwindow.h
src/widgets/: console.cpp  console.h  editconfigurations.cpp  editconfigurations.h  processlistwidgetitem.cpp  processlistwidgetitem.h  variableinputdialog.cpp  variableinputdialog.h
